Use shadowJar to pull in dependencies instead of copy
Separated unit tests to different project to enable unit testing against the shadowJar.