@@ -1,39 +1,62 @@
 plugins {
   id("otel.library-instrumentation")
+  id("com.gradleup.shadow")
 }
 
 dependencies {
   compileOnly("javax.servlet:javax.servlet-api:3.0.1")
 
-  testImplementation(project(":instrumentation:servlet:servlet-3.0:testing"))
-
-  testLibrary("org.eclipse.jetty:jetty-server:8.0.0.v20110901")
-  testLibrary("org.eclipse.jetty:jetty-servlet:8.0.0.v20110901")
-  testLibrary("org.apache.tomcat.embed:tomcat-embed-core:8.0.41")
-  testLibrary("org.apache.tomcat.embed:tomcat-embed-jasper:8.0.41")
-
-  latestDepTestLibrary("org.eclipse.jetty:jetty-server:10.+") // see servlet-5.0 module
-  latestDepTestLibrary("org.eclipse.jetty:jetty-servlet:10.+") // see servlet-5.0 module
-
-  latestDepTestLibrary("org.apache.tomcat.embed:tomcat-embed-core:9.+") // see servlet-5.0 module
-  latestDepTestLibrary("org.apache.tomcat.embed:tomcat-embed-jasper:9.+") // see servlet-5.0 module
+  // Not great practice for library instrumentation to depend on javaagent classes. (Usually better the other way.)
+  implementation(project(":javaagent-extension-api"))
+  implementation(project(":instrumentation:servlet:servlet-common:bootstrap"))
+  implementation(project(":instrumentation:servlet:servlet-javax-common:javaagent"))
+  implementation(project(":instrumentation:servlet:servlet-common:javaagent"))
+  implementation(project(":instrumentation:servlet:servlet-3.0:javaagent"))
 }
 
 tasks {
-  withType<Test>().configureEach {
-    // required on jdk17+ to allow tomcat to shutdown properly.
-    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
-    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
-  }
-}
+  shadowJar {
+    archiveClassifier = ""
 
-// Servlet 3.0 in latest Jetty versions requires Java 11
-// However, projects that depend on this module are still be using Java 8 in testLatestDeps mode
-// Therefore, we need a separate project for servlet 3.0 tests
-val latestDepTest = findProperty("testLatestDeps") as Boolean
+    duplicatesStrategy = DuplicatesStrategy.FAIL
+    exclude {
+      it.path.startsWith("META-INF") && !it.path.startsWith("META-INF/io/opentelemetry/instrumentation/")
+    }
 
-if (latestDepTest) {
-  otelJava {
-    minJavaVersionSupported.set(JavaVersion.VERSION_11)
+    minimize()
+
+    dependencies {
+      include(project(":javaagent-extension-api"))
+      include(project(":instrumentation:servlet:servlet-common:bootstrap"))
+      include(project(":instrumentation:servlet:servlet-common:javaagent"))
+      include(project(":instrumentation:servlet:servlet-javax-common:javaagent"))
+      include(project(":instrumentation:servlet:servlet-3.0:javaagent"))
+    }
+
+    relocate( // :instrumentation:servlet:servlet-common:bootstrap
+      "io.opentelemetry.javaagent.bootstrap.servlet",
+      "io.opentelemetry.instrumentation.servlet.v3_0.shaded.servlet_bootstrap"
+    )
+    relocate( // :javaagent-extension-api
+      "io.opentelemetry.javaagent.bootstrap",
+      "io.opentelemetry.instrumentation.servlet.v3_0.shaded.extension_api"
+    ) {
+      exclude("io.opentelemetry.javaagent.bootstrap.servlet")
+    }
+    relocate( // :instrumentation:servlet:servlet-javax-common:javaagent
+      "io.opentelemetry.javaagent.instrumentation.servlet.javax",
+      "io.opentelemetry.instrumentation.servlet.v3_0.shaded.servlet_javax"
+    )
+    relocate( // :instrumentation:servlet:servlet-3.0:javaagent
+      "io.opentelemetry.javaagent.instrumentation.servlet.v3_0",
+      "io.opentelemetry.instrumentation.servlet.v3_0.shaded.servlet_v3_0"
+    )
+    relocate( // :instrumentation:servlet:servlet-common:javaagent
+      "io.opentelemetry.javaagent.instrumentation.servlet",
+      "io.opentelemetry.instrumentation.servlet.v3_0.shaded.servlet_javaagent"
+    ) {
+      exclude("io.opentelemetry.javaagent.instrumentation.servlet.javax")
+      exclude("io.opentelemetry.javaagent.instrumentation.servlet.v3_0")
+    }
   }
 }
